feat: add task priority
